--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "socket.io-client": "^4.8.1"
+    "socket": "^0.15.59",
+    "socket.io-client": "^4.8.1",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.0",
