--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
